# pt-lex-etl

./: README.md  pyproject.toml
pt_lex_etl/: etl_main.py  file_parser.py  schemas.py  web_parser.py  web_scraper.py
pt_lex_etl/utils/: exceptions.py
